{
  "version": 4,
  "terraform_version": "1.0.3",
  "serial": 111,
  "lineage": "120e1871-c74e-e4ea-90f4-c2d0ce222607",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-bastion-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2021-10-16T12:16:31.298-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": false,
            "id": "projects/calm-library-264211/global/firewalls/fw-allow-bastion-a",
            "name": "fw-allow-bastion-a",
            "network": "https://www.googleapis.com/compute/v1/projects/calm-library-264211/global/networks/vpc-a",
            "priority": 1000,
            "project": "calm-library-264211",
            "self_link": "https://www.googleapis.com/compute/v1/projects/calm-library-264211/global/firewalls/fw-allow-bastion-a",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "ssh"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc-a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-bastion-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2021-10-16T12:16:21.282-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": false,
            "id": "projects/calm-library-264211/global/firewalls/fw-allow-bastion-b",
            "name": "fw-allow-bastion-b",
            "network": "https://www.googleapis.com/compute/v1/projects/calm-library-264211/global/networks/vpc-b",
            "priority": 1000,
            "project": "calm-library-264211",
            "self_link": "https://www.googleapis.com/compute/v1/projects/calm-library-264211/global/firewalls/fw-allow-bastion-b",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "ssh"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc-b"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-internal-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "udp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2021-10-16T12:16:31.161-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": false,
            "id": "projects/calm-library-264211/global/firewalls/vpc-fw-allow-internal-a",
            "name": "vpc-fw-allow-internal-a",
            "network": "https://www.googleapis.com/compute/v1/projects/calm-library-264211/global/networks/vpc-a",
            "priority": 1000,
            "project": "calm-library-264211",
            "self_link": "https://www.googleapis.com/compute/v1/projects/calm-library-264211/global/firewalls/vpc-fw-allow-internal-a",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "internal"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc-a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-internal-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "udp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2021-10-16T12:16:21.271-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": false,
            "id": "projects/calm-library-264211/global/firewalls/vpc-fw-allow-internal-b",
            "name": "vpc-fw-allow-internal-b",
            "network": "https://www.googleapis.com/compute/v1/projects/calm-library-264211/global/networks/vpc-b",
            "priority": 1000,
            "project": "calm-library-264211",
            "self_link": "https://www.googleapis.com/compute/v1/projects/calm-library-264211/global/firewalls/vpc-fw-allow-internal-b",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "internal"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc-b"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "web-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "443",
                  "8111"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2021-10-16T12:16:31.204-07:00",
            "deny": [],
            "description": "Creates firewall rule for loadbalancer",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": false,
            "id": "projects/calm-library-264211/global/firewalls/web-firewall-rule-a",
            "name": "web-firewall-rule-a",
            "network": "https://www.googleapis.com/compute/v1/projects/calm-library-264211/global/networks/vpc-a",
            "priority": 1000,
            "project": "calm-library-264211",
            "self_link": "https://www.googleapis.com/compute/v1/projects/calm-library-264211/global/firewalls/web-firewall-rule-a",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "web"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc-a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "web-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "443",
                  "8111"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2021-10-16T12:16:21.259-07:00",
            "deny": [],
            "description": "Creates firewall rule for loadbalancer",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": false,
            "id": "projects/calm-library-264211/global/firewalls/web-firewall-rule-b",
            "name": "web-firewall-rule-b",
            "network": "https://www.googleapis.com/compute/v1/projects/calm-library-264211/global/networks/vpc-b",
            "priority": 1000,
            "project": "calm-library-264211",
            "self_link": "https://www.googleapis.com/compute/v1/projects/calm-library-264211/global/firewalls/web-firewall-rule-b",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "web"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc-b"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "ubuntu-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2004-focal-v20210720",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/calm-library-264211/zones/us-central1-a/disks/ubuntu-a"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "AMD Rome",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/calm-library-264211/zones/us-central1-a/instances/ubuntu-a",
            "instance_id": "7875570826815642574",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-small",
            "metadata_fingerprint": "-6H9Tq6Ig_o=",
            "metadata_startup_script": "#!/bin/bash\n\nif ! [ $(id -u) = 0 ]; then\n    echo \"This script must be run as root\"\n    exit 1\nfi\n\nupdate_os() {\n    apt update -y\n    apt full-upgrade -y\n}",
            "name": "ubuntu-a",
            "network_interface": [
              {
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/calm-library-264211/global/networks/vpc-a",
                "network_ip": "10.128.1.10",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/calm-library-264211/regions/us-central1/subnetworks/private-subnet-a",
                "subnetwork_project": "calm-library-264211"
              }
            ],
            "project": "calm-library-264211",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/calm-library-264211/zones/us-central1-a/instances/ubuntu-a",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "internal-a",
              "ssh"
            ],
            "tags_fingerprint": "NcCWA9n5kvY=",
            "zone": "us-central1-a"
          },
          "dependencies": [
            "google_compute_network.vpc-a",
            "google_compute_subnetwork.private-subnet-a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "ubuntu-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2004-focal-v20210720",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/calm-library-264211/zones/europe-west1-b/disks/ubuntu-b"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/calm-library-264211/zones/europe-west1-b/instances/ubuntu-b",
            "instance_id": "652767515323571090",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-small",
            "metadata_fingerprint": "-6H9Tq6Ig_o=",
            "metadata_startup_script": "#!/bin/bash\n\nif ! [ $(id -u) = 0 ]; then\n    echo \"This script must be run as root\"\n    exit 1\nfi\n\nupdate_os() {\n    apt update -y\n    apt full-upgrade -y\n}",
            "name": "ubuntu-b",
            "network_interface": [
              {
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/calm-library-264211/global/networks/vpc-b",
                "network_ip": "10.132.1.10",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/calm-library-264211/regions/europe-west1/subnetworks/private-subnet",
                "subnetwork_project": "calm-library-264211"
              }
            ],
            "project": "calm-library-264211",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/calm-library-264211/zones/europe-west1-b/instances/ubuntu-b",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "internal-b",
              "ssh"
            ],
            "tags_fingerprint": "rvFAHVwUkn0=",
            "zone": "europe-west1-b"
          },
          "dependencies": [
            "google_compute_network.vpc-b",
            "google_compute_subnetwork.private-subnet-b"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "id": "projects/calm-library-264211/global/networks/vpc-a",
            "name": "vpc-a",
            "project": "calm-library-264211",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/calm-library-264211/global/networks/vpc-a"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "id": "projects/calm-library-264211/global/networks/vpc-b",
            "name": "vpc-b",
            "project": "calm-library-264211",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/calm-library-264211/global/networks/vpc-b"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router",
      "name": "router-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "bgp": [
              {
                "advertise_mode": "CUSTOM",
                "advertised_groups": [
                  "ALL_SUBNETS"
                ],
                "asn": 64514
              }
            ],
            "creation_timestamp": "2021-10-16T12:21:19.995-07:00",
            "id": "projects/calm-library-264211/regions/us-central1/routers/router-a",
            "name": "router-a",
            "network": "https://www.googleapis.com/compute/v1/projects/calm-library-264211/global/networks/vpc-a",
            "project": "calm-library-264211",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/calm-library-264211/regions/us-central1/routers/router-a"
          },
          "dependencies": [
            "google_compute_network.vpc-a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router",
      "name": "router-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "bgp": [
              {
                "advertise_mode": "CUSTOM",
                "advertised_groups": [
                  "ALL_SUBNETS"
                ],
                "asn": 64514
              }
            ],
            "creation_timestamp": "2021-10-16T12:22:27.613-07:00",
            "id": "projects/calm-library-264211/regions/europe-west1/routers/router-b",
            "name": "router-b",
            "network": "https://www.googleapis.com/compute/v1/projects/calm-library-264211/global/networks/vpc-b",
            "project": "calm-library-264211",
            "region": "europe-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/calm-library-264211/regions/europe-west1/routers/router-b"
          },
          "dependencies": [
            "google_compute_network.vpc-b"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "nat-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "icmp_idle_timeout_sec": 30,
            "id": "calm-library-264211/us-central1/router-a/router-nat",
            "log_config": [
              {
                "enable": true,
                "filter": "ERRORS_ONLY"
              }
            ],
            "min_ports_per_vm": 0,
            "name": "router-nat",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "calm-library-264211",
            "region": "us-central1",
            "router": "router-a",
            "source_subnetwork_ip_ranges_to_nat": "LIST_OF_SUBNETWORKS",
            "subnetwork": [
              {
                "name": "https://www.googleapis.com/compute/v1/projects/calm-library-264211/regions/us-central1/subnetworks/private-subnet-a",
                "source_ip_ranges_to_nat": [
                  "ALL_IP_RANGES"
                ]
              }
            ],
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_transitory_idle_timeout_sec": 30,
            "udp_idle_timeout_sec": 30
          },
          "dependencies": [
            "google_compute_network.vpc-a",
            "google_compute_router.router-a",
            "google_compute_subnetwork.private-subnet-a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "nat-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "icmp_idle_timeout_sec": 30,
            "id": "calm-library-264211/europe-west1/router-b/router-nat-b",
            "log_config": [
              {
                "enable": true,
                "filter": "ERRORS_ONLY"
              }
            ],
            "min_ports_per_vm": 0,
            "name": "router-nat-b",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "calm-library-264211",
            "region": "europe-west1",
            "router": "router-b",
            "source_subnetwork_ip_ranges_to_nat": "LIST_OF_SUBNETWORKS",
            "subnetwork": [
              {
                "name": "https://www.googleapis.com/compute/v1/projects/calm-library-264211/regions/europe-west1/subnetworks/private-subnet",
                "source_ip_ranges_to_nat": [
                  "ALL_IP_RANGES"
                ]
              }
            ],
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_transitory_idle_timeout_sec": 30,
            "udp_idle_timeout_sec": 30
          },
          "dependencies": [
            "google_compute_network.vpc-b",
            "google_compute_router.router-b",
            "google_compute_subnetwork.private-subnet-b"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "private-subnet-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2021-10-16T12:16:31.458-07:00",
            "gateway_address": "10.128.1.1",
            "id": "projects/calm-library-264211/regions/us-central1/subnetworks/private-subnet-a",
            "ip_cidr_range": "10.128.1.0/24",
            "name": "private-subnet-a",
            "network": "https://www.googleapis.com/compute/v1/projects/calm-library-264211/global/networks/vpc-a",
            "private_ip_google_access": false,
            "project": "calm-library-264211",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/calm-library-264211/regions/us-central1/subnetworks/private-subnet-a"
          },
          "dependencies": [
            "google_compute_network.vpc-a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "private-subnet-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2021-10-16T12:16:21.430-07:00",
            "gateway_address": "10.132.1.1",
            "id": "projects/calm-library-264211/regions/europe-west1/subnetworks/private-subnet",
            "ip_cidr_range": "10.132.1.0/24",
            "name": "private-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/calm-library-264211/global/networks/vpc-b",
            "private_ip_google_access": false,
            "project": "calm-library-264211",
            "region": "europe-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/calm-library-264211/regions/europe-west1/subnetworks/private-subnet"
          },
          "dependencies": [
            "google_compute_network.vpc-b"
          ]
        }
      ]
    }
  ]
}